--- a/_data/lang/en.yml
+++ b/_data/lang/en.yml
@@ -130,9 +130,9 @@ home:
   new_posts_title: New Articles
   new_posts_show_more_button: View More ...
   # you can use $site_brand in line1 and line2 to convert your site.data.owner.brand text
-  top_header_line1: "Welcome To"
+  top_header_line1: ""
   # if commented, top header will be a single line
-  top_header_line2: "$site_brand Theme"
+  top_header_line2: ""
 
 # for archives layout
 archives:
