--- a/_posts/2021-04-16-profile.md
+++ b/_posts/2021-04-16-profile.md
@@ -40,7 +40,8 @@ date: 2022-04-16 10:04:30 +0900
 
 ## 👋안녕하세요!
 ---
-안녕하세요! 컴퓨터공학전공 18학번 공지혁입니다.
+안녕하세요!
+컴퓨터공학전공 18학번 공지혁입니다.
 저는 백엔드 분야에 관심을 가지고 있고 '멋진'개발자가 되는것을 목표로 공부하고 있습니다.
 ### **🧑Profile**
 
