--- a/_data/lang/en.yml
+++ b/_data/lang/en.yml
@@ -179,7 +179,7 @@ auto_content:
   text: >
     저는 백엔드 분야에 관심을 가지고 있고 '멋진' 개발자를 목표로 공부하고 있습니다.
 
-  more_info: Learn More.
+  # more_info: Learn More.
   auto_generated_text: 제주대학교 컴퓨터공학전공 18학번 공지혁입니다.
 
 cookie_consent:
