--- a/_posts/2018-02-26-제주대학교-입학.md
+++ b/_posts/2018-02-26-제주대학교-입학.md
@@ -36,4 +36,12 @@ date: 2018-02-26 10:04:30 +0900
 # to disable this page, simply set published: false or delete this file
 #published: false
 ---
-2018 3월 제주대 입학
+# 제주대학교 입학
+
+🗓️기간: 2018. 03. 02
+
+---
+
+## ❗️ 정보
+
+- 제주대학교 공과대학교 전기전자통신컴퓨터공학부 컴퓨터공학전공 입학
