포스팅 글 작성

--- a/_posts/2021-08-30-solved-ac-골드-달성.md
+++ b/_posts/2021-08-30-solved-ac-골드-달성.md
@@ -40,11 +40,16 @@ date: 2021-08-30 10:04:30 +0900
 🗓️기간: 2021. 08. 30
 
 ---
+## 📜내용
+저는 코딩을 배우고 처음으로 알고리즘을 풀었을 때 코딩에 재미를 느끼게 됐습니다.
 
-저는 코딩에 가장 처음으로 재미를 느꼈을 때가 알고리즘을 풀었을 때 였습니다.
+처음에는 이게 알고리즘인지도 모르고 눈앞에 보이는 문제를 풀기 위해서 계속 집중하고 틀리면서 많은 시행착오를 겪었습니다.
 
-처음에는 이게 알고리즘인지도 모르고 눈앞에 보이는 문제를 풀기 위해서 계속 집중하고 틀리면서 많은 시행착오를 겪었습니다. 그러한 경험이 있었기에 지금까지 꾸준히 공부하고 노력을 들이는 거 같습니다.
+2018년부터 꾸준히 공부하고 노력하는 분야이고 덕분에 많은 성장을 이뤘습니다.
 
+### Solved.ac
 백준 사이트를 이용해서 알고리즘을 푸는데 Solved.ac의 티어를 통해서 유저별 수준을 확인할 수 있어서 자주 사용합니다.
+
+2021년 8월에 골드 티어를 달성하였습니다😀
 
 [![Solved.ac Profile](http://mazassumnida.wtf/api/v2/generate_badge?boj=kongji4092)](https://solved.ac/kongji4092/)
