--- a/_posts/2018-02-26-제주대학교-입학.md
+++ b/_posts/2018-02-26-제주대학교-입학.md
@@ -11,7 +11,7 @@ category: Experiences
 # multiple tag entries are possible
 tags: [Experiences]
 # thumbnail image for post
-img: ":profile_pic.jpg"
+img: ""
 # disable comments on this page
 #comments_disable: true
 
@@ -41,6 +41,6 @@ date: 2018-02-26 10:04:30 +0900
 
 ---
 
-## ❗️ 정보
+## 📜 내용
 
 - 제주대학교 공과대학교 전기전자통신컴퓨터공학부 컴퓨터공학전공 입학
