--- a/_posts/2019-02-07-sw특공대.md
+++ b/_posts/2019-02-07-sw특공대.md
@@ -40,5 +40,9 @@ date: 2019-02-07 10:04:30 +0900
 🗓️기간: 2019. 02. 07~2019. 02. 27
 
 ---
+## 📜내용
+제주대학교 SW 중심대학 사업을 통해서 1학년 겨울방학 동안 필리핀 바기오 어학연수를 다녀왔습니다.
 
-## ❗️ 정보
+## 💡성장 경험
+### 첫 팀 프로젝트
+처음으로 팀 프로젝트를 하게 되었는데 혼자 개발하는 것과 팀을 구성하여 개발하는 것에 차이를 경험했습니다. 팀에 도움을 많이 줄 수 없던 기억이 저의 부족함을 많이 깨닫게 되었던 중요한 경험입니다.
