포스팅 사진 추가

--- a/_posts/2019-02-07-sw특공대.md
+++ b/_posts/2019-02-07-sw특공대.md
@@ -11,7 +11,7 @@ category: Experiences
 # multiple tag entries are possible
 tags: [Experiences]
 # thumbnail image for post
-img: ""
+img: "sw_baguio.jpg"
 # disable comments on this page
 #comments_disable: true
 
@@ -37,7 +37,7 @@ date: 2019-02-07 10:04:30 +0900
 #published: false
 ---
 
-🗓️기간: 2019. 02. 07~2019. 02. 27
+🗓️기간: 2019. 02. 07 ~ 2019. 02. 27
 
 ---
 ## 📜내용
@@ -46,3 +46,5 @@ date: 2019-02-07 10:04:30 +0900
 ## 💡성장 경험
 ### 첫 팀 프로젝트
 처음으로 팀 프로젝트를 하게 되었는데 혼자 개발하는 것과 팀을 구성하여 개발하는 것에 차이를 경험했습니다. 팀에 도움을 많이 줄 수 없던 기억이 저의 부족함을 많이 깨닫게 되었던 중요한 경험입니다.
+
+![sw_baguio](https://user-images.githubusercontent.com/47727212/164425667-b8e51f10-1f9a-4c6f-8472-a4bbbd882065.jpg)
