--- a/_posts/2018-02-26-제주대학교-입학.md
+++ b/_posts/2018-02-26-제주대학교-입학.md
@@ -11,7 +11,7 @@ category: Experiences
 # multiple tag entries are possible
 tags: [Experiences]
 # thumbnail image for post
-img: "jnu.jpg"
+img: ":jnu.jpg"
 # disable comments on this page
 #comments_disable: true
 
