--- a/_posts/2019-02-07-sw특공대.md
+++ b/_posts/2019-02-07-sw특공대.md
@@ -11,7 +11,7 @@ category: Experiences
 # multiple tag entries are possible
 tags: [Experiences]
 # thumbnail image for post
-img: "sw_baguio.jpg"
+img: ":sw_baguio.jpg"
 # disable comments on this page
 #comments_disable: true
 
@@ -41,7 +41,9 @@ date: 2019-02-07 10:04:30 +0900
 
 ---
 ## 📜내용
-제주대학교 SW 중심대학 사업을 통해서 1학년 겨울방학 동안 필리핀 바기오 어학연수를 다녀왔습니다.
+제주대학교 SW 중심대학 SW 특공대 사업을 통해서 1학년 겨울방학에 필리핀 바기오 어학연수를 다녀왔습니다.
+
+영어 공부뿐만 아니라 매일 아이디어 해커톤을 진행하고 마지막 주에 팀을 구성하여 3일 동안 해커톤을 했습니다.
 
 ## 💡성장 경험
 ### 첫 팀 프로젝트
