썸네일 사진 안나오는거 수정

--- a/_posts/2021-08-30-solved-ac-골드-달성.md
+++ b/_posts/2021-08-30-solved-ac-골드-달성.md
@@ -11,7 +11,7 @@ category: Experiences
 # multiple tag entries are possible
 tags: [Experiences]
 # thumbnail image for post
-img: ":gold.jpg"
+img: ":gold.png"
 # disable comments on this page
 #comments_disable: true
 
