포스팅 맞춤법 수정

--- a/_posts/2019-02-07-sw특공대.md
+++ b/_posts/2019-02-07-sw특공대.md
@@ -41,7 +41,7 @@ date: 2019-02-07 10:04:30 +0900
 
 ---
 ## 📜내용
-제주대학교 SW 중심대학 SW 특공대 사업을 통해서 1학년 겨울방학에 필리핀 바기오 어학연수를 다녀왔습니다.
+제주대학교 SW 중심대학 SW 특공대 사업을 통해서 1학년 겨울방학에 필리핀 바기오로 어학연수를 다녀왔습니다.
 
 영어 공부뿐만 아니라 매일 아이디어 해커톤을 진행하고 마지막 주에 팀을 구성하여 3일 동안 해커톤을 했습니다.
 
