--- a/_posts/Dev/2022-11-07-무중단 배포.md
+++ b/_posts/Dev/2022-11-07-무중단 배포.md
@@ -11,7 +11,7 @@ category: Develop
 # multiple tag entries are possible
 tags: [개발, 문화]
 # thumbnail image for post
-img: ""
+img: "https://velog.velcdn.com/images%2Fznftm97%2Fpost%2F7cb6d6b7-4232-4de4-b2e0-e0f905d4a616%2FUntitled%20(27).png"
 # disable comments on this page
 #comments_disable: true
 
