--- a/_posts/Etc/2022-10-25-프로젝트 회고.md
+++ b/_posts/Etc/2022-10-25-프로젝트 회고.md
@@ -11,7 +11,7 @@ category: retrospect
 # multiple tag entries are possible
 tags: [Retrospect]
 # thumbnail image for post
-img: ""
+img: "https://jnuhongbo.jejunu.ac.kr/upload/board/editor/hongbo_jnunews/T6375c2e9eef25.jpg"
 # disable comments on this page
 #comments_disable: true
 
