포스팅 글 추가

--- a/_posts/알고리즘/2022-10-31-해시.md
+++ b/_posts/알고리즘/2022-10-31-해시.md
@@ -56,10 +56,10 @@ public class HashMapDemo {
 		HashMap<Integer, Integer> i = new HashMap<>(); // Integer, Integer 타입 설정
 		HashMap<Integer, Integer> i2 = new HashMap<>(i); // i의 값을 i2에 카피
 		HashMap<Integer, Integer> i3 = new HashMap<>(10); // 초기용량 지정
-		HashMap<Integer, Integer> i4 = new HashMap<>() {{ // 변수 선언 + 초기값 지정
+		HashMap<Integer, Integer> i4 = new HashMap<>() { // 변수 선언 + 초기값 지정
 			put(1, 100);
 			put(2, 200);
-		}};
+		};
 
 		HashMap<String, String> str = new HashMap<String, String>(); // String, String 타입 설정
 		HashMap<Character, Character> ch = new HashMap<Character, Character>(); // Char, Char 타입 설정
